--- a/ParqueoUlacit/Views/Home/Index.cshtml
+++ b/ParqueoUlacit/Views/Home/Index.cshtml
@@ -72,7 +72,7 @@
         <div class="row align-items-center">
             <div class="col-lg-6 mb-4 mb-lg-0">
                 <div class="info-image-container">
-                    <img src="https://images.unsplash.com/photo-1593453897224-f894bece8a38?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Vehículos en parqueo" class="info-image">
+                    <img src="https://globalhome.com.do/wp-content/uploads/2020/12/6-Estacion%C3%A1ndose-en-parqueo-ajeno-u.jpg" alt="Vehículos en parqueo" class="info-image">
                 </div>
             </div>
             <div class="col-lg-6">
