--- a/ParqueoUlacit/Views/Login/ChangePassword.cshtml
+++ b/ParqueoUlacit/Views/Login/ChangePassword.cshtml
@@ -13,13 +13,26 @@
 
 <div class="row justify-content-center">
     <div class="col-md-4">
-        <form method="post" action="@Url.Action("ChangePassword", "Login")">
+        <form method="post" action="@Url.Action("ChangePassword", "Login")" onsubmit="return validatePassword()">
             <div class="mb-3">
                 <label class="form-label">Nueva Contraseña</label>
-                <input type="password" name="nuevaClave" class="form-control" required />
+                <input type="password" id="nuevaClave" name="nuevaClave" class="form-control" required />
             </div>
 
             <button type="submit" class="btn btn-primary w-100">Actualizar Contraseña</button>
         </form>
     </div>
 </div>
+
+<script>
+    function validatePassword() {
+        var nuevaClave = document.getElementById("nuevaClave").value;
+
+        if (nuevaClave === "Ulacit123") {
+            alert("La nueva contraseña no puede ser 'Ulacit123'.");
+            return false; // Evita el envío del formulario
+        }
+
+        return true; // Permite el envío del formulario si la validación pasa
+    }
+</script>
